--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 click = "==6.7"
 colorama = "==0.3.9"
 croniter = "==0.3.17"
-dj-database-url = "==0.4.1"
+dj-database-url = "==0.5.0"
 django-appconf = "==1.0.2"
 django-bootstrap-datepicker = "==1.2.3"
 "django-bootstrap3-datetimepicker" = "==2.2.3"
@@ -20,23 +20,31 @@ django-widget-tweaks = "==1.4.1"
 graphviz = "==0.8.2"
 gunicorn = "==19.6.0"
 nltk = "==3.2.5"
-"psycopg2" = "==2.7"
+"psycopg2" = "==2.7.4"
 python-dateutil = "==2.6.1"
 pytz = "==2017.2"
 redis = "==2.10.5"
 rq = "==0.8.1"
 rq-scheduler = "==0.7.0"
 schedule = "==0.4.3"
-six = "==1.10.0"
+six = "==1.11.0"
 typing = "==3.6.2"
 tzlocal = "==1.4"
-virtualenv = "==15.1.0"
-whitenoise = "==3.2"
+virtualenv = "==15.2.0"
+whitenoise = "==3.3.1"
 wordnet = "==0.0.1b2"
 APScheduler = "==3.3.1"
 Django = "==1.11.3"
 "Django-Select2" = "==6.0.0"
-django-heroku = "*"
+django-heroku = "==0.3.1"
+certifi = "==2018.4.16"
+chardet = "==3.0.4"
+idna = "==2.6"
+pipenv = "==11.10.0"
+pygeocoder = "==1.2.5"
+requests = "==2.18.4"
+"urllib3" = "==1.22"
+virtualenv-clone = "==0.3.0"
 
 [dev-packages]
 
