--- a/Pipfile
+++ b/Pipfile
@@ -45,6 +45,8 @@ pygeocoder = "==1.2.5"
 requests = "==2.18.4"
 "urllib3" = "==1.22"
 virtualenv-clone = "==0.3.0"
+geographiclib = "==1.49"
+geopy = "==1.13.0"
 
 [dev-packages]
 
