--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ django-select2==6.0.0
 django-session-security==2.5.1
 django-sorting==0.1
 django-widget-tweaks==1.4.1
+geographiclib==1.49
+geopy==1.13.0
 idna==2.6
 nltk==3.2.5
 pipenv==11.10.0
